doc/k8s/mall-v1-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mall-v1-api-admin
  namespace: zhiyi-cloud
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: mall-v1-api-admin
  template:
    metadata:
      labels:
        tier: mall-v1-api-admin
    spec:
      containers:
      - name: mall-v1-api-admin 
        image: registry.cn-shanghai.aliyuncs.com/zhiyi-cloud/mall-v1-api-admin:1.0
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            port: 80
            path: /actuator/health
          initialDelaySeconds: 1
          periodSeconds: 3
