doc/k8s/gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: zhiyi-gateway-svc
  namespace: zhiyi-cloud
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    tier: zhiyi-gateway
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-web
  namespace: zhiyi-cloud
spec:
  rules:
  - host: "api.zhiyi.zone"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: zhiyi-gateway-svc
            port:
              number: 80
---

# 网关服务
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zhiyi-gateway
  namespace: zhiyi-cloud
spec:
  replicas: 3
  selector:
    matchLabels:
      tier: zhiyi-gateway
  template:
    metadata:
      labels:
        tier: zhiyi-gateway
    spec:
      containers:
        - name: zhiyi-gateway
          image: registry.cn-shanghai.aliyuncs.com/zhiyi-cloud/zhiyi-gateway:1.0
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              port: 80
              path: /actuator/health
            initialDelaySeconds: 1
            periodSeconds: 3
