doc/k8s/monitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: zhiyi-monitor-svc
  namespace: zhiyi-cloud
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    tier: zhiyi-monitor
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor-web
  namespace: zhiyi-cloud
spec:
  rules:
  - host: "monitor.zhiyi.zone"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: zhiyi-monitor-svc
            port:
              number: 80
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zhiyi-monitor
  namespace: zhiyi-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: zhiyi-monitor
  template:
    metadata:
      labels:
        tier: zhiyi-monitor
    spec:
      containers:
      - name: zhiyi-monitor
        image: registry.cn-shanghai.aliyuncs.com/zhiyi-cloud/zhiyi-monitor:1.0
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            port: 80
            path: /actuator/health
          initialDelaySeconds: 1
          periodSeconds: 3
